Bug 116865 - Drag to move DOM nodes does not work
Summary: Drag to move DOM nodes does not work
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Inspector (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Joseph Pecoraro
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2013-05-28 07:00 PDT by Timothy Hatcher
Modified: 2013-05-28 19:23 PDT (History)
5 users (show)

See Also:


Attachments
[PATCH] Proposed Fix (1.38 KB, patch)
2013-05-28 18:35 PDT, Joseph Pecoraro
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Hatcher 2013-05-28 07:00:21 PDT
Drag to rearrange and move DOM nodes does not work. I'm pretty sure it was working at some point.
Comment 1 Radar WebKit Bug Importer 2013-05-28 07:00:35 PDT
<rdar://problem/14000045>
Comment 2 Joseph Pecoraro 2013-05-28 18:35:51 PDT
Created attachment 203109 [details]
[PATCH] Proposed Fix
Comment 3 WebKit Commit Bot 2013-05-28 19:22:15 PDT
The commit-queue encountered the following flaky tests while processing attachment 203109 [details]:

media/track/track-remove-crash.html bug 115892 (author: eric.carlson@apple.com)
svg/batik/paints/patternRegions.svg bug 116380 (author: zimmermann@kde.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2013-05-28 19:23:30 PDT
Comment on attachment 203109 [details]
[PATCH] Proposed Fix

Clearing flags on attachment: 203109

Committed r150861: <http://trac.webkit.org/changeset/150861>
Comment 5 WebKit Commit Bot 2013-05-28 19:23:32 PDT
All reviewed patches have been landed.  Closing bug.