Drag to move DOM nodes does not work https://bugs.webkit.org/show_bug.cgi?id=116865

Do not block drag events on the WebKit 1 Web Inspector WebView.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2013-05-28
Reviewed by Timothy Hatcher.

* WebCoreSupport/WebInspectorClient.mm:

Canonical link: https://commits.webkit.org/135200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150861 268f45cc-cd09-0410-ab3c-d52691b4dbfc